--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                
 
                 <ul class="nav-links">
-                    <li><a href="index1.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="https://github.com/DhumalPranav">Github</a></li>
                     <li><a href="https://www.linkedin.com/in/dhumalpranav/">LinkedIn</a></li>
                 </ul>
